--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 	<main>
-		<div class="intro">Hello, I'm Leo @ Alpac.io 123!</div>
+		<div class="intro">Hello, I'm Leo!</div>
 		<div class="tagline">FullStack Developer | Vue &amp; GraphQl Fanatic</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
