--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Alpacio</title>
+	<title>Alpac.io</title>
 
 	<!-- <link rel="icon" href="favicon.ico" type="image/png" /> -->
 
@@ -28,7 +28,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Leo!</div>
-		<div class="tagline">FullStack Developer | Vue &amp; GraphQl Fanatic</div>
+		<div class="tagline">FullStack Developer | Vue &amp; GraphQl Fanatic | Alpaca lover</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/leovanhaaren"><i class="fab fa-github"></i></a>
