--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Leo!</div>
-		<div class="tagline">FullStack Developer | Vue &amp; GraphQl Fanatic | Alpaca lover</div>
+		<div class="tagline">FullStack Developer | Vuejs &amp; GraphQl Fanatic | Alpaca lover</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/leovanhaaren"><i class="fab fa-github"></i></a>
