--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 	<title>Leo van Haaren</title>
 
-	<!-- <link rel="icon" href="favicon.ico" type="image/png" /> -->
+	 <link rel="icon" href="favicon.ico" type="image/png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+	<!--<link rel="stylesheet" href="css/themes/indigo-white.css">-->
+	 <link rel="stylesheet" href="css/themes/green-white.css">
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
